merging with 2.5.x branch